[package]
name = "vregex"
version = "0.4.0"
edition = "2024"
description = "Regular Expression engine"
authors = ["Vaurkhorov <sssamantaray77@gmail.com"]
repository = "https://github.com/Vaurkhorov/vregex"

[dependencies]
petgraph = "0.8.1"
wasm-bindgen = "0.2.100"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = []